# Raccoon-Rust

./: .ycm_extra_conf.py  Cargo.toml  LICENSE  README.md  rls.toml
src/: lib.rs  main.rs
src/core/: game.rs  game_controller.rs  game_error.rs  game_loop.rs  game_loop_interface.rs  game_state.rs  halstate.rs  mod.rs  renderable.rs  system.rs  updatable.rs
src/core/ecs/: any_system.rs  component.rs  entity.rs  entity_builder.rs  mod.rs  realm.rs  simple_data_container.rs  system.rs  system_data_container.rs
src/core/ecs/components/: empty_component.rs  graphic_renderer_component.rs  mod.rs  transform_component.rs  updatable.rs
src/core/ecs/containers/: any_data_container.rs  mod.rs  simple_data_container.rs  system_data_container.rs
src/core/ecs/systems/: game_system.rs  mod.rs  rendering_system.rs  update_system.rs
src/core/entity/: component.rs  entity.rs  mod.rs  transform_component.rs
src/core/scene/: mod.rs  scene.rs  scene_component.rs  scene_director.rs  scene_error.rs
src/events/: event.rs  event_handler.rs  event_listener.rs  mod.rs
src/game/: game.rs  game_error.rs  mod.rs
src/graphics/: drawable.rs  graphic.rs  image.rs  mod.rs  renderable.rs  texture.rs
src/graphics/error/: mod.rs  texture_error.rs
src/graphics/shaders/: error.rs  mod.rs  shader.rs  shader_builder.rs
src/input/: button.rs  button_state.rs  input.rs  input_event.rs  input_event_listener.rs  key.rs  key_modifiers.rs  keyboard_event.rs  keycode.rs  mod.rs  mouse_button.rs  mouse_button_event.rs  mouse_scroll_delta.rs  touch_event.rs  touch_phase.rs  userinput.rs
src/math/: mod.rs  sign_check.rs  size.rs  triangle.rs  vector2.rs  zero.rs
src/rendering/: graphics_device.rs  halstate.rs  mod.rs  renderer.rs  rendering_requirements.rs  resource_disposable.rs  shader_stage.rs  vertex.rs
src/rendering/backend/: mod.rs  no_renderer_backend.rs  renderer_backend_interface.rs
src/rendering/backend/error/: mod.rs  renderer_backend_error.rs  renderer_no_backend_error.rs
src/rendering/backend/hal/: device_adapter_backend.rs  mod.rs  shader_bindings.rs  state.rs  texture_bindings.rs  vulkan_renderer_backend.rs
src/rendering/backend/hal/error/: hal_error.rs  hal_graphics_pipeline_error.rs  hal_init_error.rs  hal_render_error.rs  hal_texture_bindings_error.rs  mod.rs
src/rendering/backends/: backend_interface.rs  graphics_device.rs  halstate.rs  mod.rs  no_backend.rs  renderer_backend_interface.rs  resource_disposable.rs  shader_bindings.rs  texture_bindings.rs  vertex.rs  vulkan_backend.rs  vulkan_renderer_backend.rs
src/rendering/backends/hal/: device_adapter_backend.rs  mod.rs  shader_bindings.rs  state.rs  texture_bindings.rs
src/rendering/error/: mod.rs  render_error.rs  renderer_init_error.rs
src/resources/shaders/: basic_shader.frag  basic_shader.vert
src/tools/log/: error.rs  log_listener.rs  logger.rs  mod.rs  stdout_listener.rs
src/window/: mod.rs  window.rs  window_event.rs  window_event_listener.rs
src/window/backends/: backend_event_loop.rs  backend_interface.rs  backend_window.rs  input_events_handler.rs  input_events_indirect_handler.rs  mod.rs  window_events_handler.rs  winit_backend.rs
test/no-backend/: Cargo.toml
test/no-backend/src/: main.rs
test/no-backend/src/player/: mod.rs  player_component.rs  player_input_component.rs
test/no-backend/src/scenes/: gameplay_scene_component.rs  mod.rs
test/vulkan/: Cargo.toml
test/vulkan/src/: main.rs
