[package]
name = "raccoon-rust"
version = "0.1.0"
authors = ["Lucas Miranda <miranda.a.lucas@gmail.com>"]
edition = "2018"
license = "MIT"

[features]
default = []
metal = ["winit", "raw-window-handle", "shaderc", "gfx-hal", "gfx-backend-metal"]
dx12 = ["winit", "raw-window-handle", "shaderc", "gfx-hal", "gfx-backend-dx12"]
vulkan = ["winit", "raw-window-handle", "shaderc", "gfx-hal", "gfx-backend-vulkan"]
gl = ["winit", "raw-window-handle", "shaderc", "gfx-hal", "gfx-backend-gl"]
no-backend = []

[dependencies]
chrono = "^0.4"
colored = "^1.9"
arrayvec = "^0.5"
raw-window-handle = { version = "^0.3", optional = true }
winit = { version = "^0.22", optional = true }
shaderc = { version = "^0.6", optional = true }
gfx-hal = { version = "^0.6", optional = true }
enumflags2 = "^0.6"
image_handler = { package = "image", version = "^0.23" }

[target.'cfg(target_os = "macos")'.dependencies]
gfx-backend-metal = { version = "^0.6", optional = true }

[target.'cfg(windows)'.dependencies]
gfx-backend-dx12 = { version = "^0.6", optional = true }

[dependencies.gfx-backend-vulkan]
version = "^0.6"
features = ["x11"]
optional = true

[target.'cfg(unix)'.dependencies.gfx-backend-gl]
version = "^0.5"
features = ["x11"]
optional = true

[target.'cfg(not(unix))'.dependencies.gfx-backend-gl]
version = "^0.5"
optional = true
